@@ -125,7 +125,6 @@ class BuilddSlaveTestSetup(TacTestFixture):
         return os.path.abspath(os.path.join(
             os.path.dirname(__file__),
             os.path.pardir,
-            os.path.pardir,
             'buildd-slave.tac'
             ))
 
